fixed absolute positioning alignment of main content and header and styled home page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,7 +21,14 @@ header {
   padding: 10px 0;
   text-align: center;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
+  background-color: #242424;
+  border-bottom: 4px solid;
+  /* z-index: 1000; */
+}
+
+#main-content{
+  margin-top: 70px;
+  width: 100%;
 }
 
 footer {
@@ -41,8 +48,9 @@ footer {
   justify-content: space-evenly;
   align-items: center;
   min-height: 100vh;
-  padding: 60px 0; /* Adjust for fixed header and footer */
+  padding: 60px 0; 
   box-sizing: border-box;
+  width: 100%
 }
 
 a {
@@ -55,15 +63,20 @@ a:hover {
 }
 
 body {
-  margin: 15px;
+  margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  flex-direction: column;
+  min-width: 100%;
   min-height: 100vh;
 }
 
 h1 {
   font-size: 3.2em;
+  line-height: 1.1;
+}
+
+h2 {
+  font-size: 3em;
   line-height: 1.1;
 }
 
